Ajout de quelques permissions et des grades dans les cities (#478)
* Ajout de quelques permissions dans les cities

* Rewrite de la méthode verify afin qu'elle envoie true si le joueur est membre de la ville

* Changement du cancelEvent -> cancelMessage

* Optimisation des méthodes de vérification de chunk

* Base des ranks

* Modification de nom de méthodes

* Refactor city ranks management

* Enhance city rank management with new methods and improved error handling

* Remove ranks in db when city is deleted

* Refactor city rank management UI and validation logic

* Oubli de push (bizarre)

* Repair city list

* Fix mascot display in city details menu to handle missing entities

* Add city rank assignation feature

* Oubli (jsp pk, y'a des fichiers oubliés defois)

* Update DB management

* MERGE DE TOUT DANS MA BRANCH

* presque fini

* Patch petit bug mascottes

* Finish ranks db management + fix mascots

* Added documentation

* Petit oubli + correction doc

* Réparation du merge

* Refactor DB perms

* Continue de resolve des bugs de perms -> PAS FINI à voir

* fix: java.sql.SQLSyntaxErrorException: Column 'id' not found. for removePlayerPermission

* chore: begining of rewrite ranks

* chore: add paginatedmenu with StaticSlots for inventory size

* fix: Cannot invoke "fr.openmc.core.features.city.City.getUUID()" because "city" is null

* fix: city is null, cannot city.getUUID()

* add: getSizeOfItems() for Paginated Menu

* optimize: CityRankIconMenu

* add confirm button

* add retour bouton for icon menu

* add: permission for grades and improve QoL

* add: rename option on menu and sign gui

* add: delete actions for commands and menu

* change: permission

* change: CityRankDetailsMenu

* add: title everywhere

* fix: title Aucun iambibi_ (QoL)

* fix: title Membre iambibi_ (QoL)

* qol: litte things

* add: filter for icon menu

* fix lore Perm and Name menu

* fix lore Perm and Name menu

* build: fix

* review of gab

* chore: Component.text("") to Com